# circularis

./: .gitignore  .travis.yml  MANIFEST.in  Pipfile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: django.yml
circularis/: asgi.py  settings.py  urls.py  wsgi.py
circularis/accounts/: admin.py  apps.py  forms.py  urls.py  views.py
circularis/accounts/migrations/: 0001_initial.py  0002_user_nickname.py
circularis/base/: admin.py  apps.py  common.py  communication.py  decorators.py  forms.py  models.py  urls.py  views.py
circularis/base/migrations/: 0001_initial.py  0002_auto_20200724_0423.py  0003_auto_20200727_2227.py  0004_delete_bookstatus.py
circularis/base/templates/: address.html  config_home.html  index.html  maps.html
circularis/base/test/: test_access.py  test_profile.py  test_simple.py
circularis/books/: admin.py  apps.py  common.py  forms.py  models.py  services.py  urls.py  views.py
circularis/books/migrations/: 0001_initial.py  0002_auto_20210331_1735.py  0003_alter_book_thumbnail.py  0004_alter_bookstatus_code.py  0005_alter_bookstatus_code.py
circularis/books/templates/: accept_confirm.html  add_by_isbn.html  book.html  books.html  delete_confirm.html  my_books.html  reject_confirm.html  request_confirm.html
circularis/messaging/: admin.py  apps.py  models.py  services.py  urls.py  views.py
circularis/messaging/migrations/: 0001_initial.py  0002_auto_20211005_2211.py  (+2 more)
contrib/: env-sample
static/css/: baseit.css
templates/: base.html  home.html
templates/includes/: footer.html  header.html
(+3 files in other folders)
