[tool.poetry]
name = "circularis"
version = "0.1.0"
description = ""
authors = ["Paulo Marques <pepcmarques@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
